--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,11 @@
         padding: 20px 24px;
     }
     
+    .catalog-link:hover,
+    .catalog-link:focus {
+        box-shadow: 1px 4px 1px 1px rgba(0, 0, 0, 0.16);
+    }
+    
     .site-nav {
         color: var(--primary-text-color);
         font-weight: 500;
@@ -404,6 +409,9 @@
     .employees-content-wrapper {
         padding: 30px 10px;
         background-color: #FFFFFF;
+        border-radius: 4px;
+        border: 1px solid rgba(0, 0, 0, 0.12);
+        border-top: none;
     }
     
     .employees-name {
@@ -577,14 +585,13 @@
         background-color: var(--primary-text-color-theme-dark);
         padding: 60px 0;
         display: flex;
-        align-items: center;
     }
     
     .footer-container {
-        width: 231px;
-        height: 81px;
-        margin-right: 70px;
+        width: 1200px;
         padding-left: 15px;
+        padding-right: 15px;
+        margin: 0 auto;
     }
     
     .footer-title {
