--- a/css/styles.css
+++ b/css/styles.css
@@ -461,7 +461,7 @@
     
     .social-list-link:hover .social-list-icon,
     .social-list-link:focus .social-list-icon {
-        fill: #2196F3;
+        fill: #FFFFFF;
     }
     
     .text {
