--- a/css/styles.css
+++ b/css/styles.css
@@ -168,16 +168,16 @@
         margin-bottom: 30px;
     }
     
+    .catalog-list :hover,
+    .catalog-list :focus {
+        box-shadow: 0px 4px 0px 1px rgba(0, 0, 0, 0.25);
+    }
+    
     .catalog-content-wrapper {
         border-bottom: 1px solid #EEEEEE;
         border-left: 1px solid #EEEEEE;
         border-right: 1px solid #EEEEEE;
         padding: 20px 24px;
-    }
-    
-    .catalog-link:hover,
-    .catalog-link:focus {
-        box-shadow: 0px 4px 0px 1px rgba(0, 0, 0, 0.25);
     }
     
     .site-nav {
@@ -263,12 +263,14 @@
         text-align: center;
         cursor: pointer;
         padding: 6px 22px 6px 22px;
+        border: none;
     }
     
     .style-btn:hover,
     .style-btn:focus {
         color: #FFFFFF;
         background-color: #2196F3;
+        box-shadow: 0px 4px 0px 1px rgba(0, 0, 0, 0.25);
     }
     
     .style-btn.current {
@@ -290,7 +292,6 @@
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background_hero.jpg);
         background-repeat: no-repeat;
         background-position: center;
-        background-size: contain;
     }
     
     .hero-title {
@@ -503,9 +504,6 @@
         margin-right: 30px;
         width: 170px;
         height: 92px;
-        border: 1px solid#AFB1B8;
-        align-items: center;
-        padding: 16px 32px 16px 32px;
     }
     
     .clients-list:hover,
@@ -517,20 +515,14 @@
         margin-right: 0;
     }
     
-    .clients {
-        width: 106px;
-        height: 60px;
+    .our-clients {
+        width: 100%;
+        height: 100%;
         fill: #AFB1B8;
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .our-clints {
-        width: 106px;
-        height: 60px;
-        fill: #AFB1B8;
+        display: flex;
         align-items: center;
         justify-content: center;
+        border: 1px solid#AFB1B8;
     }
     
     .our-clients-icon {
@@ -599,6 +591,7 @@
         padding-right: 15px;
         margin: 0 auto;
         display: flex;
+        align-items: baseline;
     }
     
     .footer-icons {
